xml/src2/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Race__c</fullName>
        <description>Asian : People of Asia, Southeast Asia, or the Indian Subcontinent (includes Bangladesh, Pakistan, and Myanmar) 
African American/Black : People of Black African racial groups of Africa, the Caribbean, or North, Central, or South America who identify themselves as African American or Black.
Hispanic/Latino : People of Central American, Cuban, Mexican, Puerto Rican, South American, or Spanish culture or heritage, regardless of race.
Native American : People who are Alaskan Native,  American Indian, Eskimo, and/or indigenous people of North America, and/or who maintain tribal affiliation or community recognition.
pacific Islander : People with origins and/or heritage in the Pacific Islands, including Fiji, Guam, Hawaii, Samoa, and Tonga.
White : People with origins and/or heritage in any of the peoples of Europe, the Middle East, North Africa, or the former USSR.
Multi-Racial : Members with origins and/or heritage in two or more of the other six categories</description>
        <inlineHelpText>Select the racial categories that best describes contact.  If multi-racial and specific racial categories are unknown, use Multi-racial</inlineHelpText>
        <label>Race</label>
        <picklist>
            <picklistValues>
                <fullName>African American/Black</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Caucasian/White</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hispanic/Latino</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Native American</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pacific Islander</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Multi Racial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Declined</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Race_other__c</fullName>
        <description>Other Races</description>
        <label>Race Other</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Report_UMEA__c</fullName>
        <label>Report_UMEA</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Representation_Other_specify__c</fullName>
        <description>Representation other specify</description>
        <label>Representation(Other/Specify)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Representation__c</fullName>
        <description>GBHEM Board of Directors Representation</description>
        <label>Representation</label>
        <picklist>
            <picklistValues>
                <fullName>Missing</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Additional Member</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Africa Central Conference</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Central and Southern Europe Central Conference</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Congo Central Conference</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Elected (Jurisdiction)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Episcopal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Germany Central Conference</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Liaison</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>North Central Jurisdiction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Northeastern Jurisdiction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Northern Europe Central Conference</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pan Methodist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Philippines Central Conference</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>South Central Jurisdiction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Southeastern Jurisdiction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>West Africa Central Conference</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Western Jurisdiction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other/Specify</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SSN__c</fullName>
        <description>Social Security Number</description>
        <inlineHelpText>Enter Contact&apos;s Social Security Number.  May be entered with or without dashes.</inlineHelpText>
        <label>SSN</label>
        <length>11</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Salutation_Other__c</fullName>
        <description>Other Salutation for the contact</description>
        <inlineHelpText>Enter salutation if not found in Picklist</inlineHelpText>
        <label>Salutation Other</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Special_Needs_Description__c</fullName>
        <inlineHelpText>Provide any additional information about the need</inlineHelpText>
        <label>Special Needs Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Special_Needs__c</fullName>
        <inlineHelpText>Assistance requested for these special needs</inlineHelpText>
        <label>Special Needs</label>
        <picklist>
            <picklistValues>
                <fullName>Allergies - Food</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Allergies - Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hearing impairment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mobility impairment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vegetarian Meals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Visual impairment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wheelchair accessibility needed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Contact Status</description>
        <inlineHelpText>Select &apos;Inactive&apos; when entire contact record is no longer valid for communication</inlineHelpText>
        <label>Contact Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>UM_Study__c</fullName>
        <defaultValue>false</defaultValue>
        <description>UM Study Transcripts</description>
        <label>UM Study</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>URL__c</fullName>
        <description>Url of the Contacts organization or his own .</description>
        <label>URL</label>
        <type>Url</type>
    </fields>
    <listViews>
        <fullName>AllContacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>Contact_Address_Line1__c</columns>
        <columns>Contact_Address_Line2__c</columns>
        <columns>Contact_City__c</columns>
        <columns>Contact_State__c</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>Annual_Conference__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Contacts</label>
    </listViews>
    <listViews>
        <fullName>All_Active_Contacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>Contact_Address_Line1__c</columns>
        <columns>Contact_Address_Line2__c</columns>
        <columns>Contact_City__c</columns>
        <columns>Contact_State__c</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>Annual_Conference__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <label>All Active Contacts</label>
    </listViews>
    <listViews>
        <fullName>All_Inactive_Contacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>Contact_Address_Line1__c</columns>
        <columns>Contact_Address_Line2__c</columns>
        <columns>Contact_City__c</columns>
        <columns>Contact_State__c</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>Annual_Conference__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Inactive</value>
        </filters>
        <label>All Inactive Contacts</label>
    </listViews>
    <listViews>
        <fullName>BirthdaysThisMonth</fullName>
        <columns>FULL_NAME</columns>
        <columns>Preferred_Name__c</columns>
        <columns>Date_of_Birth__c</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>Contact_Address_Line1__c</columns>
        <columns>Contact_Address_Line2__c</columns>
        <columns>Contact_City__c</columns>
        <columns>Contact_State__c</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>Annual_Conference__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>DOB_Month__c</field>
            <operation>equals</operation>
            <value>10</value>
        </filters>
        <label>Birthdays This Month</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <validationRules>
        <fullName>Appointment_DualAppointment</fullName>
        <active>true</active>
        <description>The Dual Appointment should be filled only if Appoitment is filled</description>
        <errorConditionFormula>OR(AND(NOT( ISPICKVAL( Dual_Appointment__c, &apos;&apos; ) ),  ISPICKVAL( Appointment__c ,&apos;&apos;) ),
IF( 
AND(NOT( ISPICKVAL( Dual_Appointment__c, &apos;&apos; )) ,NOT(ISPICKVAL( Appointment__c ,&apos;&apos;)),NOT( ISPICKVAL( Dual_Appointment__c, &apos;Missing&apos;)),NOT(ISPICKVAL( Appointment__c ,&apos;Missing&apos;))), 
TEXT( Dual_Appointment__c) = TEXT( Appointment__c), null))</errorConditionFormula>
        <errorMessage>If &apos;Appointment&apos; does not have a value, &apos;Dual Appointment&apos; may not have a value. &apos;Appointment&apos; and &apos;Dual Appointment&apos; may not have same values</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Denomination_Other</fullName>
        <active>true</active>
        <description>If the &apos;Denomination&apos; is &apos;Others/Specify&apos; .Then user should enter a value in the &apos;Denomination_Other__c&apos;</description>
        <errorConditionFormula>AND( ISPICKVAL( Denomination__c ,&quot;Other/Specify&quot;) , ISBLANK( Denomination_Other__c ) )</errorConditionFormula>
        <errorDisplayField>Denomination_Other__c</errorDisplayField>
        <errorMessage>&apos;Denomination Other&apos; should contain a value if Denomination &apos;Other/Specify&apos;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>EmergencyContactNumeber_Validation</fullName>
        <active>true</active>
        <description>Phone only Number</description>
        <errorConditionFormula>AND (NOT (
OR ( LEN ( Emergency_Contact_Number__c  ) = 0,
REGEX(Emergency_Contact_Number__c   ,&quot;[0-9]{10}&quot;),
REGEX(Emergency_Contact_Number__c  , &quot;\\D*?(\\d\\D*?){10}&quot;)
)
)
)</errorConditionFormula>
        <errorDisplayField>Emergency_Contact_Number__c</errorDisplayField>
        <errorMessage>&apos;Emergency Contact Number&apos; Field should be in this format (999)999-9999 and should be only Numbers</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>MilitaryRank_Other</fullName>
        <active>true</active>
        <description>If the &apos;Military Rank&apos; is &apos;Others/Specify&apos; .Then user should enter a value in the &apos;Military Rank(other/Specify)&apos;</description>
        <errorConditionFormula>AND( ISPICKVAL(  Military_Rank__c  ,&quot;Other/Specify&quot;) , ISBLANK(  Military_Rank_Other_Specify__c ) )</errorConditionFormula>
        <errorDisplayField>Military_Rank_Other_Specify__c</errorDisplayField>
        <errorMessage>&apos;Military Rank Other/Specify&apos; may contain a value, if Military Rank &apos;Other/Specify&apos;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>MilitaryRank_disable_MilitaryRankOther</fullName>
        <active>true</active>
        <description>If the Military Rank value is not &apos;Other/Specify&apos; .then Military Rank(Other/Specify) have to be disabled.</description>
        <errorConditionFormula>AND(NOT( ISPICKVAL(  Military_Rank__c  ,&quot;Other/Specify&quot;)) ,NOT( ISBLANK(  Military_Rank_Other_Specify__c  ) ))</errorConditionFormula>
        <errorDisplayField>Military_Rank_Other_Specify__c</errorDisplayField>
        <errorMessage>&apos;Military Rank (Other/Specify)&apos; may not contain a value if Military Rank is NOT &apos;Other/Specify&apos;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Race_Declined</fullName>
        <active>true</active>
        <description>If the value of the Field is &apos;Declined&apos; .No other value should be selected</description>
        <errorConditionFormula>IF(INCLUDES(Race__c,&apos;Declined&apos;), 
(IF ((IF(INCLUDES( Race__c , &apos;African American/Black&apos;) ,1, 0) 
+ IF( INCLUDES( Race__c , &apos;Multi Racial&apos;) ,1, 0) 
+ IF( INCLUDES( Race__c , &apos;Other&apos;) ,1, 0) 
+ IF( INCLUDES( Race__c , &apos;Asian&apos;) ,1, 0) 
+ IF(INCLUDES( Race__c , &apos;Caucasian/White&apos;) ,1, 0) 
+ IF(INCLUDES( Race__c , &apos;Hispanic/Latino&apos;) ,1, 0) 
+ IF(INCLUDES( Race__c , &apos;Native American&apos;) ,1, 0) 
+ IF(INCLUDES( Race__c , &apos;Pacific Islander&apos;) ,1, 0)) &gt; 0,TRUE,FALSE)),FALSE)</errorConditionFormula>
        <errorDisplayField>Race__c</errorDisplayField>
        <errorMessage>If the value of the Field &apos;Race&apos; is &apos;Declined&apos; .No other value should be selected.Please update the Field.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Race_MultiRacial</fullName>
        <active>true</active>
        <description>If the value of the Field &apos;Race&apos; is &apos;Multi Racial&apos; .No other value should be selected</description>
        <errorConditionFormula>IF(INCLUDES(Race__c,&apos;Multi Racial&apos;), 
(IF ((IF(INCLUDES( Race__c , &apos;African American/Black&apos;) ,1, 0) 
+ IF( INCLUDES( Race__c , &apos;Declined&apos;) ,1, 0) 
+ IF( INCLUDES( Race__c , &apos;Other&apos;) ,1, 0) 
+ IF( INCLUDES( Race__c , &apos;Asian&apos;) ,1, 0) 
+ IF(INCLUDES( Race__c , &apos;Caucasian/White&apos;) ,1, 0) 
+ IF(INCLUDES( Race__c , &apos;Hispanic/Latino&apos;) ,1, 0) 
+ IF(INCLUDES( Race__c , &apos;Native American&apos;) ,1, 0) 
+ IF(INCLUDES( Race__c , &apos;Pacific Islander&apos;) ,1, 0)) &gt; 0,TRUE,FALSE)),FALSE)</errorConditionFormula>
        <errorDisplayField>Race__c</errorDisplayField>
        <errorMessage>No other value may be selected if &apos;Multi-racial&apos; is selected.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Race_Other</fullName>
        <active>true</active>
        <description>If the &apos;Race&apos; is &apos;Other&apos; .Then user should enter a value in the &apos;Race_Other__c&apos;</description>
        <errorConditionFormula>AND( INCLUDES(  Race__c  ,&quot;Other&quot;) , ISBLANK(  Race_other__c  ) )</errorConditionFormula>
        <errorDisplayField>Race_other__c</errorDisplayField>
        <errorMessage>No other value must be selected if &apos;Other/Specify&apos; is selected.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Representation_OtherSpecify</fullName>
        <active>true</active>
        <description>Representation(Other/specify) may have a value only when Representation is &apos;Other/Specify&apos;</description>
        <errorConditionFormula>AND( ISPICKVAL( Representation__c ,&quot;Other/Specify&quot;) , ISBLANK(     Representation_Other_specify__c ) )</errorConditionFormula>
        <errorDisplayField>Representation_Other_specify__c</errorDisplayField>
        <errorMessage>&apos;Representation (Other/specify)&apos; may contain a value if Representation is &apos;Other/Specify&apos;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Representation_Rep_OtherSpecify</fullName>
        <active>true</active>
        <description>Representation(Other/specify) may have a value only when Representation is &apos;Other/Specify&apos;</description>
        <errorConditionFormula>AND(NOT( ISPICKVAL( Representation__c  ,&quot;Other/Specify&quot;)) ,NOT( ISBLANK(    Representation_Other_specify__c ) ))</errorConditionFormula>
        <errorDisplayField>Representation_Other_specify__c</errorDisplayField>
        <errorMessage>Representation(Other/specify) may not contain a value when Representation is not  &apos;Other/Specify&apos;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Social_Security_Format</fullName>
        <active>true</active>
        <description>Validates that the Social Security Number is in the correct format.</description>
        <errorConditionFormula>(LEN(SSN__c) &gt; 0 &amp;&amp; 
CONTAINS(SSN__c, &quot;-&quot;)) &amp;&amp; 
(NOT(REGEX( SSN__c ,&quot;[0-9]{3}-[0-9]{2}-[0-9]{4}&quot;))) || 

(LEN(SSN__c) &gt; 0 &amp;&amp; 
NOT(CONTAINS(SSN__c, &quot;-&quot;))) 
&amp;&amp; (NOT(REGEX( SSN__c ,&quot;[0-9]{9}&quot;)))</errorConditionFormula>
        <errorDisplayField>SSN__c</errorDisplayField>
        <errorMessage>The Social Security number you entered is not in the correct format. The correct format is 999-99-9999 or 999999999.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SpecialNeeds_NA</fullName>
        <active>true</active>
        <description>If value of Special Needs  is N/A ,No other value may be selected</description>
        <errorConditionFormula>IF(INCLUDES(Special_Needs__c,&apos;N/A&apos;), 
(IF ((IF(INCLUDES( Special_Needs__c, &apos;Allergies - Food&apos;) ,1, 0) 
+ IF( INCLUDES( Special_Needs__c, &apos;Allergies - Other&apos;) ,1, 0) 
+ IF( INCLUDES( Special_Needs__c, &apos;Hearing impairment&apos;) ,1, 0) 
+ IF( INCLUDES( Special_Needs__c, &apos;Mobility impairment&apos;) ,1, 0) 
+ IF(INCLUDES( Special_Needs__c, &apos;Other&apos;) ,1, 0) 
+ IF(INCLUDES( Special_Needs__c, &apos;Vegetarian Meals&apos;) ,1, 0) 
+ IF(INCLUDES( Special_Needs__c, &apos;Visual impairment&apos;) ,1, 0) 
+ IF(INCLUDES( Special_Needs__c, &apos;Wheelchair accessibility needed&apos;) ,1, 0)) &gt; 0,TRUE,FALSE)),FALSE)</errorConditionFormula>
        <errorDisplayField>Special_Needs__c</errorDisplayField>
        <errorMessage>If Value of &apos;Special Needs&apos; is N/A , no Other value may be selected</errorMessage>
    </validationRules>
</CustomObject>